# duckdb-advanced-gui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  start.sh
templates/: index.html
